--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,7 @@ REDIS_URL=redis://:${REDIS_PASSWORD}@localhost:6379
 # Generate: openssl rand -hex 32
 N8N_ENCRYPTION_KEY=
 N8N_USER_MANAGEMENT_JWT_SECRET=
+N8N_WEBHOOK_URL=
 
 # ===========================================
 # TELEGRAM
