--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,39 @@ services:
           memory: 128M
     logging: *default-logging
 
+  searxng:
+    image: searxng/searxng:latest
+    container_name: synesis-searxng
+    restart: unless-stopped
+    init: true
+    networks:
+      - synesis
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./searxng:/etc/searxng:rw
+    environment:
+      - SEARXNG_BASE_URL=http://localhost:8080/
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:8080/healthz || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 128M
+    logging: *default-logging
+
   n8n:
     image: n8nio/n8n:latest
     container_name: synesis-n8n
