chore: add truncation logging and improve .env.example
  - Log debug message when telegram message is truncated (includes message_id, original_length)
  - Replace placeholder passwords with empty values and clearer instructions

--- a/.env.example
+++ b/.env.example
@@ -12,13 +12,13 @@ SYNESIS_LOG_LEVEL=INFO
 # ===========================================
 # DATABASE (PostgreSQL + TimescaleDB)
 # ===========================================
-DB_PASSWORD=changeme_strong_password_here
+DB_PASSWORD=  # REQUIRED: Generate with: openssl rand -hex 32
 DATABASE_URL=postgresql+asyncpg://synesis:${DB_PASSWORD}@localhost:5435/synesis
 
 # ===========================================
 # REDIS
 # ===========================================
-REDIS_PASSWORD=changeme_redis_password_here
+REDIS_PASSWORD=  # REQUIRED: Generate with: openssl rand -hex 32
 REDIS_URL=redis://:${REDIS_PASSWORD}@localhost:6379
 
 # ===========================================
