--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,11 @@ dependencies = [
     "orjson>=3.10.0",
     "semhash>=0.4.1",
     "model2vec>=0.7.0",
+    "fastembed>=0.4.0",
+    # RSS parsing (Reddit Flow 2)
+    "feedparser>=6.0",
+    # Stock price data (Finnhub)
+    "finnhub-python>=2.4.0",
 ]
 
 [project.optional-dependencies]
@@ -57,7 +62,7 @@ packages = ["src/synesis"]
 
 [tool.ruff]
 line-length = 100
-src = ["src", "tests"]
+src = ["src", "tests", "scripts"]
 
 [tool.mypy]
 python_version = "3.12"
@@ -73,6 +78,10 @@ module = [
     "py_clob_client.*",
     "redis.*",
     "pydantic_ai.*",
+    "feedparser",
+    "feedparser.*",
+    "finnhub",
+    "finnhub.*",
 ]
 ignore_missing_imports = true
 
@@ -82,6 +91,9 @@ asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
 filterwarnings = [
     "ignore::DeprecationWarning",
+]
+markers = [
+    "integration: marks tests as integration tests (run with: pytest -m integration)",
 ]
 
 [dependency-groups]
