further pr fixes, constants refactoring

--- a/.env.example
+++ b/.env.example
@@ -88,6 +88,12 @@ EXA_API_KEY=
 BRAVE_API_KEY=
 
 # ===========================================
+# FINNHUB (Stock Price Data)
+# ===========================================
+# Get API key from https://finnhub.io (free tier: 60 calls/min)
+FINNHUB_API_KEY=
+
+# ===========================================
 # TRADING (Safety)
 # ===========================================
 # CRITICAL: Set to true only when ready to execute real trades
