Refactor providers + Gate 2 urgency filter + Telegram fix
  Provider refactoring:
  - Move finnhub/prices from ingestion/ to providers/
  - Add provider protocols (TickerProvider, PriceProvider)
  - Remove price outcome tracking from database

  Flow 1 changes:
  - Gate 2 now filters by urgency only (LOW/NORMAL skip Stage 2)
  - Simplify classifier system prompt
  - Fix Telegram HTML: blockquote → i (400 error fix)

  Flow 2 changes:
  - Update Reddit subreddits (remove noise: smallstreetbets, Daytrading,
  pennystocks)
  - Reddit first-run now processes all posts for sentiment baseline

  Other:
  - Add n8n to docker-compose
  - Fix silent exceptions in ticker.py cache parsing
  - Add pymssql dependency for FactSet

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,13 @@ REDIS_PASSWORD=  # REQUIRED: Generate with: openssl rand -hex 32
 REDIS_URL=redis://:${REDIS_PASSWORD}@localhost:6379
 
 # ===========================================
+# N8N (Workflow Automation)
+# ===========================================
+# Required for n8n encryption and JWT
+N8N_ENCRYPTION_KEY=  # REQUIRED: Generate with: openssl rand -hex 32
+N8N_USER_MANAGEMENT_JWT_SECRET=  # REQUIRED: Generate with: openssl rand -hex 32
+
+# ===========================================
 # TELEGRAM (Ingestion)
 # ===========================================
 # Get from https://my.telegram.org
@@ -43,10 +50,23 @@ TELEGRAM_CHAT_ID=
 # TWITTER/X
 # ===========================================
 # Using TwitterAPI.io (or similar third-party provider)
-TWITTER_API_KEY=
+TWITTERAPI_API_KEY=
 TWITTER_API_BASE_URL=https://api.twitterapi.io
-# Comma-separated usernames to follow
-TWITTER_ACCOUNTS=DeItaone,KobeissiLetter,Fxhedgers,zerohedge
+# JSON array of usernames to follow
+TWITTER_ACCOUNTS=["DeItaone","KobeissiLetter","Fxhedgers","zerohedge"]
+
+# Source categorization (affects urgency in Flow 1)
+# News accounts = high urgency (breaking news, act fast)
+TWITTER_NEWS_ACCOUNTS=["DeItaone","realDonaldTrump"]
+# Analysis accounts = normal urgency (insights, consider)
+TWITTER_ANALYSIS_ACCOUNTS=["elonmusk","NickTimiraos","charliebilello","KobeissiLetter"]
+
+# ===========================================
+# REDDIT (Flow 2 - Sentiment Intelligence)
+# ===========================================
+# JSON array of subreddits to monitor (no r/ prefix needed)
+REDDIT_SUBREDDITS=["wallstreetbets","stocks","StockMarket","options","thetagang"]
+REDDIT_POLL_INTERVAL=21600  # 6 hours in seconds
 
 # ===========================================
 # POLYMARKET
@@ -88,16 +108,41 @@ EXA_API_KEY=
 BRAVE_API_KEY=
 
 # ===========================================
-# FINNHUB (Stock Price Data)
+# CRAWL4AI (Web Crawling)
 # ===========================================
+# Start with: docker compose up -d crawl4ai
+CRAWL4AI_URL=http://localhost:11235
+
+# ===========================================
+# DATA PROVIDERS
+# ===========================================
+# Provider selection (allows swapping data sources)
+PRICE_PROVIDER=finnhub
+TICKER_PROVIDER=finnhub
+FUNDAMENTALS_PROVIDER=finnhub  # Options: finnhub, none
+
+# Finnhub (Stock Price Data)
 # Get API key from https://finnhub.io (free tier: 60 calls/min)
 FINNHUB_API_KEY=
 
 # ===========================================
-# TRADING (Safety)
+# FACTSET (SQL Server - Optional)
 # ===========================================
-# CRITICAL: Set to true only when ready to execute real trades
-TRADING_ENABLED=false
-MAX_POSITION_SIZE=100
-MIN_EDGE_THRESHOLD=0.05
-CONFIDENCE_THRESHOLD=0.7
+# Only needed if using FactSet data feeds
+SQLSERVER_HOST=
+SQLSERVER_PORT=1433
+SQLSERVER_DATABASE=
+SQLSERVER_USER=
+SQLSERVER_PASSWORD=
+
+# ===========================================
+# PROCESSING (Advanced)
+# ===========================================
+# Concurrency settings (defaults work well for most setups)
+PROCESSING_WORKERS=5
+PROCESSING_QUEUE_SIZE=100
+WEB_SEARCH_MAX_QUERIES=2
+POLYMARKET_MAX_KEYWORDS=5
+
+# Output directory for signals
+SIGNALS_OUTPUT_DIR=output/signals
