--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,29 @@ services:
           memory: 128M
     logging: *default-logging
 
+  crawl4ai:
+    image: unclecode/crawl4ai:latest
+    container_name: synesis-crawl4ai
+    restart: unless-stopped
+    init: true
+    networks:
+      - synesis
+    ports:
+      - "11235:11235"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:11235/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+        reservations:
+          memory: 512M
+    logging: *default-logging
+
   n8n:
     image: n8nio/n8n:latest
     container_name: synesis-n8n
