--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "feedparser>=6.0",
     # Stock price data (Finnhub)
     "finnhub-python>=2.4.0",
+    "pymssql>=2.3.11",
 ]
 
 [project.optional-dependencies]
