Refactor providers + sentiment pipeline + fix PR review issues
  - Replace intelligence/sentiment with processing/sentiment (lexicon
    analyzer, two-gate pipeline, Flow 2 processor)
  - Add FactSet ticker provider and provider factory registration
  - Add FastAPI router, API routes, and CLI entrypoint
  - Restructure agent lifespan and pydantic runner
  - Delete dead modules: intelligence/, feedback/, flows/, trading/,
    core/events, core/exceptions, processing/market_intel
  - Remove legacy data/lexicons JSON files
  - Fix lstrip bug in subreddit parsing (use removeprefix)
  - Remove dead analyze_sync method
  - Restore markets/__init__.py
  - Upgrade DB persistence failure log to error
  - Delete no-op Pydantic v1 class Config block
  - Update CLAUDE.md, README.md, and tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,9 @@ dependencies = [
     "pymssql>=2.3.11",
 ]
 
+[project.scripts]
+synesis = "synesis.cli:main"
+
 [project.optional-dependencies]
 dev = [
     "pytest>=8.3.0",
