--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "eth-account>=0.13.0",
     # Vector/Embeddings (for deduplication)
     "pgvector>=0.3.6",
+    # Rate limiting
+    "slowapi>=0.1.9",
     # Utilities
     "python-dotenv>=1.0.1",
     "tenacity>=9.0.0",
