Add Flow 3 market intelligence pipeline and fix historical market cap
  Market Intelligence (mkt_intel):
  - Kalshi + Polymarket REST clients, WebSocket clients, and WS manager
  - Scanner (volume spikes, odds movements, expiring markets)
  - Wallet tracker (insider scoring, auto-watch discovery)
  - Processor orchestrating scan → signal → Telegram + Redis pub/sub
  - API endpoints (/mkt_intel/latest, /run, /opportunities, /wallets, /ws-status)
  - Telegram formatter (no uncertainty/informed footer metrics)
  - Config settings, constants, DB schema (market_snapshots hypertable)
  - 180 unit tests + integration test scaffolding

  FactSet historical market cap:
  - Support optional ?date= param on /market-cap endpoint
  - Use adjusted_price × adj_shares so split factors cancel out
  - Extract _get_split_period_factors() and _adjustment_factor_for_date()
  - Add SHARES_OUTSTANDING_AS_OF_DATE query for point-in-time lookups

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ dependencies = [
     "fastembed>=0.4.0",
     # RSS parsing (Reddit Flow 2)
     "feedparser>=6.0",
+    # Kalshi RSA-PSS authentication
+    "cryptography>=44.0.0",
     # Stock price data (Finnhub)
     "finnhub-python>=2.4.0",
     "pymssql>=2.3.11",
