--- a/.env.example
+++ b/.env.example
@@ -77,6 +77,12 @@ POLYMARKET_PRIVATE_KEY=
 POLYMARKET_CHAIN_ID=137
 
 # ===========================================
+# KALSHI
+# ===========================================
+KALSHI_API_KEY=
+KALSHI_PRIVATE_KEY_PATH=
+
+# ===========================================
 # LLM PROVIDER
 # ===========================================
 # Provider: "anthropic" or "openai" (for ZAI, use "openai" with custom base URL)
