Add volume spike detection, outcome labels, category enrichment, and harden error handling

--- a/.env.example
+++ b/.env.example
@@ -80,7 +80,7 @@ POLYMARKET_CHAIN_ID=137
 # KALSHI
 # ===========================================
 KALSHI_API_KEY=
-KALSHI_PRIVATE_KEY_PATH=
+KALSHI_PRIVATE_KEY_PATH=keys/kalshi-private-key.pem  # Download from Kalshi account settings
 
 # ===========================================
 # LLM PROVIDER
