Add SEC EDGAR, NASDAQ, and watchlist intelligence providers with API routes and bug fixes

--- a/.env.example
+++ b/.env.example
@@ -120,12 +120,25 @@ BRAVE_API_KEY=
 CRAWL4AI_URL=http://localhost:11235
 
 # ===========================================
+# SEC EDGAR (free, no key required)
+# ===========================================
+SEC_EDGAR_USER_AGENT=Synesis synesis@example.com
+SEC_EDGAR_CACHE_TTL_SUBMISSIONS=3600   # 1 hour
+SEC_EDGAR_CACHE_TTL_CIK_MAP=86400     # 24 hours
+
+# ===========================================
+# NASDAQ (free, no key required)
+# ===========================================
+NASDAQ_CACHE_TTL_EARNINGS=21600        # 6 hours
+NASDAQ_EARNINGS_LOOKAHEAD_DAYS=14
+
+# ===========================================
 # DATA PROVIDERS
 # ===========================================
 # Provider selection (allows swapping data sources)
 PRICE_PROVIDER=finnhub
 TICKER_PROVIDER=finnhub
-FUNDAMENTALS_PROVIDER=finnhub  # Options: finnhub, none
+FUNDAMENTALS_PROVIDER=finnhub  # Options: finnhub, sec_edgar, none
 
 # Finnhub (Stock Price Data)
 # Get API key from https://finnhub.io (free tier: 60 calls/min)
@@ -140,6 +153,45 @@ SQLSERVER_PORT=1433
 SQLSERVER_DATABASE=
 SQLSERVER_USER=
 SQLSERVER_PASSWORD=
+
+# ===========================================
+# API URLs (defaults are usually fine)
+# ===========================================
+KALSHI_API_URL=https://api.elections.kalshi.com/trade-api/v2
+KALSHI_WS_URL=wss://api.elections.kalshi.com/trade-api/ws/v2
+POLYMARKET_GAMMA_API_URL=https://gamma-api.polymarket.com
+POLYMARKET_DATA_API_URL=https://data-api.polymarket.com
+POLYMARKET_CLOB_WS_URL=wss://ws-subscriptions-clob.polymarket.com/ws/market
+FINNHUB_WS_URL=wss://ws.finnhub.io
+FINNHUB_API_URL=https://finnhub.io/api/v1
+
+# ===========================================
+# MARKET INTELLIGENCE (Flow 3)
+# ===========================================
+MKT_INTEL_ENABLED=true
+MKT_INTEL_INTERVAL=3600               # 1 hour scan cycle
+MKT_INTEL_VOLUME_SPIKE_THRESHOLD=1.0   # 100% increase triggers spike
+MKT_INTEL_INSIDER_SCORE_MIN=0.5
+MKT_INTEL_EXPIRING_HOURS=24
+MKT_INTEL_WS_ENABLED=true
+MKT_INTEL_AUTO_WATCH_THRESHOLD=0.6
+MKT_INTEL_UNWATCH_THRESHOLD=0.3
+
+# ===========================================
+# WATCHLIST INTELLIGENCE (Flow 4)
+# ===========================================
+WATCHLIST_INTEL_ENABLED=false
+WATCHLIST_INTEL_INTERVAL=21600         # 6 hours
+WATCHLIST_INTEL_EARNINGS_ALERT_DAYS=7
+WATCHLIST_INTEL_MAX_TICKERS=30
+
+# ===========================================
+# TRADING
+# ===========================================
+TRADING_ENABLED=false
+MAX_POSITION_SIZE=100.0
+MIN_EDGE_THRESHOLD=0.05
+CONFIDENCE_THRESHOLD=0.7
 
 # ===========================================
 # PROCESSING (Advanced)
