--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     # Stock price data (Finnhub)
     "finnhub-python>=2.4.0",
     "pymssql>=2.3.11",
+    "defusedxml>=0.7.1",
 ]
 
 [project.scripts]
@@ -111,4 +112,5 @@ dev = [
     "pytest-asyncio>=1.3.0",
     "pytest-cov>=7.0.0",
     "ruff>=0.14.13",
+    "types-defusedxml>=0.7.0.20250822",
 ]
