Add real-time arb monitor, wallet tracking, and fix Polymarket WS subscription
  - Add real-time cross-platform arb monitor via Redis pub/sub price updates
  - Expand wallet tracker with auto-watch, fast-track, and re-scoring pipeline
  - Fix Polymarket WS: subscribe with CLOB token IDs instead of condition_id
  - Remove unused Finnhub WS callbacks from WatchlistManager
  - Silence websockets library debug logging (raw frame dumps)
  - Add provider factory pattern with FactSet/Finnhub ticker providers
  - Enhance Telegram notifications with arb alerts and watchlist signals
  - Expand mkt_intel scanner with odds movements and volume spike detection
  - Add comprehensive unit and integration tests for all new functionality

--- a/.env.example
+++ b/.env.example
@@ -80,7 +80,7 @@ POLYMARKET_CHAIN_ID=137
 # KALSHI
 # ===========================================
 KALSHI_API_KEY=
-KALSHI_PRIVATE_KEY_PATH=keys/kalshi-private-key.pem  # Download from Kalshi account settings
+KALSHI_PRIVATE_KEY_PATH=keys/kalshi-private-key.txt  # Download from Kalshi account settings
 
 # ===========================================
 # LLM PROVIDER
@@ -136,9 +136,8 @@ NASDAQ_EARNINGS_LOOKAHEAD_DAYS=14
 # DATA PROVIDERS
 # ===========================================
 # Provider selection (allows swapping data sources)
-PRICE_PROVIDER=finnhub
-TICKER_PROVIDER=finnhub
-FUNDAMENTALS_PROVIDER=finnhub  # Options: finnhub, sec_edgar, none
+TICKER_PROVIDER=factset         # Options: factset, finnhub
+FUNDAMENTALS_PROVIDER=factset  # Options: factset, finnhub, sec_edgar, none
 
 # Finnhub (Stock Price Data)
 # Get API key from https://finnhub.io (free tier: 60 calls/min)
