Add centralized scheduler, fix Telegram message splitting, and harden error handling
  - Extract scheduler jobs into agent/scheduler.py with APScheduler
  - Wrap all 4 scheduler jobs in try/except for structured error logging
  - Fix Telegram message splitting: use send_long_telegram in integration
    tests, add part indicators (⋯ 1/N) for multi-chunk messages
  - Guard Finnhub Redis cache deserialization against corrupt entries
  - Remove dead get_telegram_source_type() and fix broken
    format_combined_signal import in test script
  - Update docs and tests across all flows

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dependencies = [
     "finnhub-python>=2.4.0",
     "pymssql>=2.3.11",
     "defusedxml>=0.7.1",
+    "apscheduler>=3.11,<4",
 ]
 
 [project.scripts]
@@ -82,6 +83,7 @@ plugins = ["pydantic.mypy"]
 
 [[tool.mypy.overrides]]
 module = [
+    "apscheduler.*",
     "asyncpg.*",
     "telethon.*",
     "py_clob_client.*",
